# scmrelax

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: GDP_application_2016.ipynb  GDP_application_2020.ipynb  Makefile  balanced_GDP_data.csv  conf.py  example.ipynb  make.bat
src/scmrelax/: __init__.py  scmrelax.py
tests/: test_scmrelax.py
