[tool.poetry]
name = "scmrelax"
version = "0.1.0"
description = "Estimate combination weights in synthetic control methods by relaxed balancing approaches, including L2, EL and Entropy-SCM-Relaxation."
authors = ["Chengwang Liao, Ji Pan, Yapeng Zheng"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.14"
numpy = ">=2.3.0"
cvxpy = ">=1.6.6"
scikit-learn = ">=1.7.0"
mosek = ">=11.0.22"


[tool.poetry.group.dev.dependencies]
jupyter = ">=1.1.1"
matplotlib = ">=3.10.3"
seaborn = ">=0.13.2"
pandas = ">=2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
